package edu.fiuba.algo3.modelo.tablero;

public enum Recurso {
    ARCILLA,
    MADERA,
    LANA,
    MINERAL,
    CEREAL
}
